--- a/index.html
+++ b/index.html
@@ -65,6 +65,25 @@
     }, false);
 </script>
 
+<style>
+    html {
+        background: black;
+    }
+
+    .container {
+        color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100vh;
+    }
+
+    .content svg {
+        width: 200px;
+    }
+</style>
+
 <div class="container">
     <div class="content" id="dino">
         <svg xmlns="http://www.w3.org/2000/svg" version="1.0" width="300.000000pt" height="220.000000pt" viewBox="0 0 300.000000 220.000000" preserveAspectRatio="xMidYMid meet">
